excel-to-records/main/default/objects/ExcelToRecords_AsynchronousDml__e/ExcelToRecords_AsynchronousDml__e.object-meta.xml
<CustomObject>
    <label>Excel to Records - Asynchronous DML</label>
    <pluralLabel>Excel to Records - Asynchronous DMLs</pluralLabel>
</CustomObject>