excel-to-records/main/default/objects/ExcelToRecords_AsynchronousDml__e/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <label>Failed</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>