excel-to-records/main/default/objects/ExcelToRecords_AsynchronousDml__e/fields/NumberOfRecords__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRecords__c</fullName>
    <label>Number of Records</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>