excel-to-records/main/default/objects/ExcelToRecords_AsynchronousDml__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>