excel-to-records/main/default/objects/ExcelToRecords_AsynchronousDml__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>